# snap-cors

./: Changelog.md  README.md  default.nix  snap-cors.cabal  snap-cors.dhall  snaplet-cors.cabal
src/Snap/: CORS.hs
src/Snaplet/: CORS.hs
