name:                snap-cors
version:             1.0.0
synopsis:            Add CORS headers to Snap applications
-- description:         
homepage:            http://github.com/ocharles/snap-cors
license:             BSD3
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ollie@ocharles.org.uk
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs: src
  exposed-modules:
    Snap.CORS
  build-depends:
    base >= 4.5 && < 5,
    bytestring >= 0.10 && < 0.11,
    hashable >= 1.1 && <1.2,
    network >= 2.4 && < 2.5,
    snap >= 0.13 && < 0.14,
    text >= 0.11 && < 0.12,
    transformers >= 0.3 && < 0.4,
    unordered-containers >= 0.2 && <0.3